<resources>
    <string name="app_name">POS</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_info">Please login to your account</string>
    <string name="_label">Language :</string>
    <string name="arabic_label">Arabic</string>
    <string name="english_label">English</string>
    <string name="erpnext">ERPNext</string>
    <string name="login_to">Login to</string>
    <string name="sales_label">Sales</string>
    <string name="purchase_label">Purchase</string>
    <string name="item_label">Item</string>
    <string name="customer_label">Customer</string>
    <string name="shift_label">Shift</string>
    <string name="report_label">Report</string>
    <string name="settings_label">Settings</string>
    <string name="item_list_label">Item List</string>
    <string name="item_card_label">Item card</string>
    <string name="add_label">Add item&#160;</string>
    <string name="itemview_title">Item view</string>
    <string name="available_stock_qty">Available Stock Qty</string>
    <string name="barcode">Barcode</string>
    <string name="item_tax">Item Tax</string>
    <string name="settings_title">Settings</string>
    <string name="shift_report">Shift Report</string>
    <string name="the_cash_by_the_start_of_shift">The cash by the start of shift</string>
    <string name="customers_title">Customers</string>
    <string name="view_button_label">View</string>
    <string name="add_buttonLabel">ADD</string>
    <string name="sales_title">Sales</string>
    <string name="customer_title">Customer</string>
    <string name="licence_server">Licence server</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="usd_symbol">USD</string>
    <string name="dummy_ruppee">100</string>
    <string name="purchase_pay_title">Purchase Pay</string>
    <string name="suppliers_label">Suppliers</string>
    <string name="add_supplier_title">Add Supplier</string>
    <string name="add_address_title">Add address</string>
    <string name="purchase_invoice_title">Purchase Invoice</string>
    <string name="supplier_label">Supplier</string>
    <string name="qty_label">Qty</string>
    <string name="rate_label">Rate</string>
    <string name="total_label">Total</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_pay">Pay</string>
    <string name="btn_complete">Complete</string>
    <string name="invoice_title">Invoice</string>
    <string name="invoice_to">Invoice to</string>
    <string name="btn_checkout">Checkout</string>
    <string name="dashboard_menu_style">Dashboard menu style</string>
    <string name="empty_data">Empty data</string>
    <string name="enter_licencekey">Enter licence key</string>
    <string name="enter_category">Enter category name</string>
    <string name="add_category_failed">Add Category Failed</string>
    <string name="category_added_success">Category added successfully</string>
    <string name="invalid_customer">Invalid customer id</string>
    <string name="customer_details_failed">Could not fetch customer details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_tax_id">Enter tax id</string>
    <string name="enter_credit_limit">Enter credit limit</string>
    <string name="enter_rate">Enter rate</string>
    <string name="supplier_add_failed">Supplier adding failed. Please retry</string>
    <string name="supplier_added_successfully">Supplier Added successfully</string>
    <string name="address_list_fail">Address list fetching failed</string>
    <string name="address_list_empty">Address list empty</string>
    <string name="list_empty">List empty</string>
    <string name="no_response">No response</string>
    <string name="error_occurred">Error occurred</string>
    <string name="item_name_required">Item name required</string>
    <string name="description_required">Description required</string>
    <string name="rate_required">Rate required</string>
    <string name="enter_stock">Enter stock</string>
    <string name="select_uom">Select UOM</string>
    <string name="select_category">Select category</string>
    <string name="success">Success</string>
    <string name="item_add_failed">Item add failed</string>
    <string name="quantity">Quantity</string>
    <string name="uom">Uom</string>
    <string name="exceed_stock">cannot exceed stock</string>
    <string name="zero_quantity">quantity zero</string>
    <string name="select_customer">Select customer</string>
    <string name="item_select">Item select</string>
    <string name="select_quantity">Select quantity</string>
    <string name="invalid_userid">Invalid user id</string>
    <string name="orders_title">Orders</string>
    <string name="order_success">Order added successfully</string>
    <string name="add_item_success">Item added successfully</string>
    <string name="no_items">No items found in db</string>
    <string name="categoryExists">Category exists. Change name</string>
    <string name="invalid_orderid">Invalid order Id</string>
    <string name="invalid_customerid">Invalid customer id</string>
    <string name="search_items">Search items</string>
    <string name="select_items">Select items</string>
    <string name="checkout_title">Checkout</string>
    <string name="tax_amount">Tax amount</string>
    <string name="item_discount">item discount</string>
    <string name="net_payable">Net Payable</string>
    <string name="no_such_order">No such order</string>
    <string name="quantity_label">Quantity</string>
    <string name="gross_amount">Gross amount</string>
    <string name="net_amount">Net amount</string>
    <string name="no_orders">No orders</string>
    <string name="invalid_invoice">Invalid invoice</string>
    <string name="select_payment_type">Select payment type</string>
    <string name="invoice_update_failed">Invoice update failed</string>
    <string name="invoice_btn">Invoice</string>
    <string name="add_item">Add Item</string>
    <string name="addcategoryfirst">Add category First</string>
    <string name="category_label">Category</string>
    <string name="item_missing">No items in order. Please add item</string>
    <string name="new_item_added">New item added</string>
    <string name="item_updated">Item updated</string>
    <string name="alert">Alert</string>
    <string name="delete_confirmation">Are you sure want to delete ?</string>
    <string name="delete_label">Delete</string>
    <string name="no_such_category">No such category</string>
    <string name="category_delete_success">Category deleted successfully</string>
    <string name="item_add_and_proceed">No item record found. Add item first and then proceed with sales</string>
    <string name="update_btn">update</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="cate_update_success">Category updated successfully</string>
    <string name="invalid_item">Invalid item id</string>
    <string name="item_update_success">Item update successful</string>
    <string name="item_delete_success">Item removed successfully</string>
    <string name="loading">Loading...</string>
    <string name="units_btn">Units of Measure</string>
    <string name="payment_modes">Mode of Payment</string>
    <string name="customer_add_success">Customer added successfully</string>
    <string name="uom_add_success">Uom added successfully</string>
    <string name="enter_uom_name">Enter uom name</string>
    <string name="name_exists">Name already exists</string>
    <string name="category_name">Category name</string>
    <string name="pay_type">Please select pay type</string>
    <string name="pay_type_label">Pay type</string>
    <string name="pay_mode_save_success">Payment mode saved successfully</string>
    <string name="mobile_field">Mob: </string>
    <string name="update">UPDATE</string>
    <string name="customer_update_success">Customer update success</string>
    <string name="invalid_deteail_refresh">Invalid details. Refresh</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="total_items">Total items</string>
    <string name="taxes_label">Taxes</string>
    <string name="taxes">Taxes</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_pay_type_first">Add payment types first and proceed</string>
    <string name="tax_add_success">Added tax successfully</string>
    <string name="tax_percent">Tax percentage</string>
    <string name="slab_details">Slab details</string>
    <string name="update_success">Update success</string>
    <string name="add_tax_first">Add tax slabs and proceed</string>
    <string name="add_uom_and_procedd">Add units and then proceed</string>
    <string name="additional_discount">Additional discount</string>
    <string name="new_order">New Order</string>
    <string name="no_id_found">No ids found</string>
    <string name="no_such_item">No such item</string>
    <string name="no_such_mode">No such mode</string>
    <string name="due_date">Due date</string>
    <string name="date_label">Date</string>
    <string name="select_due_date">Select due date</string>
    <string name="close">CLOSE</string>
    <string name="barcode_empty">Barcode empty</string>
    <string name="not_found">Not found</string>
    <string name="item_barcode_not_found">No item found with the barcode \n </string>
    <string name="payment_mode_name">Payment mode name</string>
    <string name="filter_all">All</string>
    <string name="filter_paid">Paid</string>
    <string name="filter_unpaid">UnPaid</string>
    <string name="filter_overdue">Overdue</string>
    <string name="filter_return">Return</string>
    <string name="unit_price">unit price</string>
    <string name="available_stock">Stock</string>
    <string name="item_name">Item Name</string>
    <string name="btn_ok">OK</string>
    <string name="order_details">Order details</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="open_shift">Open shift</string>
    <string name="beginning_cash">Beginning cash</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="app_language">App language</string>
    <string name="item_stock_update">Item stock empty. Please update stock</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="customer">Customer</string>
    <string name="balance">Balance</string>
    <string name="payment">Payment</string>
    <string name="reference_no">Reference no</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="currency">Currency</string>
    <string name="choose_currency">Currency default not found. Choose currency in settings</string>
    <string name="checkout_confirmation">Proceed to checkout ?</string>
    <string name="company_details">Company details</string>
    <string name="edit">Edit</string>
    <string name="name_in_english">Name in English</string>
    <string name="company_name_in_english">Company name in English</string>
    <string name="company_name_arabic">Company name Arabic</string>
    <string name="name_in_arabic">Name in Arabic</string>
    <string name="tax_number">Tax number</string>
    <string name="company_name_eng_requied">Enter name in english</string>
    <string name="company_name_in_ar_required">Company name in Arabic required</string>
    <string name="tax_number_required">Tax number required</string>
    <string name="data_updated">Data updated</string>
    <string name="pos_title">POS</string>
    <string name="ending_cash">Ending cash</string>
    <string name="cash_by_the_end_of_the_shift">Cash by the end of the shift</string>
    <string name="close_shift">Close shift</string>
    <string name="hours">hours</string>
    <string name="start_time">Start time</string>
    <string name="continue_label">continue</string>
    <string name="contact_admin">Don\'t have an account? Contact</string>
</resources>