<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_all"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paid"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_paid"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_unpaid"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_unpaid"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_overdue"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_overdue"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_return"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/filter_return"/>

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>