<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".presentation.ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center|bottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_appLogo"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pos_machine"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pos_title"
                    android:textStyle="bold"
                    android:textSize="28dp"
                    android:textColor="@color/color_accent_secondary"/>

            </LinearLayout>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="28dp"
                android:textColor="@color/color_accent_secondary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info"/>


        </LinearLayout>

        <!--Body-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to"
                    android:layout_marginEnd="10dp"/>

                <RadioGroup
                    android:id="@+id/rg_logintype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_erpnext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:clickable="false"
                        android:text="@string/erpnext"/>

                </RadioGroup>

            </LinearLayout>


            <!--<androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PrimaryInputStyle"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/license_key"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="12dp"
                android:visibility="visible"
                android:paddingBottom="12dp"/>-->

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/PrimaryInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:hint="username"
                android:text="sammish.t@momscode.in"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:visibility="visible" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrimaryInputStyle"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="50dp"
                    android:hint="password"
                    android:text="Posnext1324"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"/>

                <LinearLayout
                    android:id="@+id/ll_showPass"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="end|center_vertical">

                    <ImageView
                        android:id="@+id/iv_show"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_baseline_remove_red_eye_24"/>


                </LinearLayout>

            </FrameLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                style="@style/PrimaryButtonStyle"
                android:textSize="14dp"
                android:text="@string/continue_label"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"/>


        </LinearLayout>


        <!--footer-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_accent_secondary"
                    android:text="@string/contact_admin"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_accent"
                    android:text="Admin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_accent_secondary"
                    android:text="@string/_label"/>

                <LinearLayout
                    android:id="@+id/ll_lang_arab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_accent"
                        android:layout_marginStart="10dp"
                        android:text="@string/arabic_label"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/flag_ar"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_lang_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_accent"
                        android:layout_marginStart="10dp"
                        android:text="@string/english_label"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/flag_am"/>

                </LinearLayout>




            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>